--- a/views/item-edit.ejs
+++ b/views/item-edit.ejs
@@ -7,6 +7,18 @@
     <input type="text" id="partNumber" name="partNumber" class="form-control" value="<%=item.partNumber%>"/>
     <label for="quantity">Quantity:</label>
     <input type="number" id="quantity" name="quantity" class="form-control"value="<%=item.quantity%>"/>
+    <label for="vendor">Vendor:</label>
+    <select id="vendor" name="vendor" class="form-select">
+      <option selected>Choose a vendor...</option>
+      <% vendors.forEach(vendor => {%>
+        <option value="<%=vendor.id%>" <%if(selectedVendor){%>
+          <% if(vendor.id === selectedVendor.id){%>
+            <%="selected"%>
+          <%}}%>
+          >
+          <%=vendor.name%></option>
+      <%})%>
+    </select>
   </div>
   <input type="submit" value="Update" class="btn btn-primary" />
 
