--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,10 +19,10 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/items">Items</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="/vendors">Vendors</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
