--- a/views/vendor-new.ejs
+++ b/views/vendor-new.ejs
@@ -1,13 +1,12 @@
-<h2>Add a new item</h2>
-<form action="/items" method="POST">
+<h2>New Vendor</h2>
+<form action="/vendors/<%=vendor.id%>/?_method=create" method="POST">
   <div class="form-group">
-    <label for="description">Description:</label>
-    <input type="text" id="description" name="description" class="form-control" />
-    <label for="partNumber">Part Number:</label>
-    <input type="text" id="partNumber" name="partNumber" class="form-control" />
-    <label for="quantity">Quantity:</label>
-    <input type="text" id="quantity" name="quantity" class="form-control" />
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" class="form-control" value="<%=vendor.name%>"/>
+    <label for="URL">URL:</label>
+    <input type="text" id="URL" name="URL" class="form-control" value="<%=vendor.URL%>"/>
   </div>
   <input type="submit" value="Create" class="btn btn-primary" />
-  <a href="/items" class="btn btn-secondary">Cancel</a>
+
+  <a href="/vendors" class="btn btn-secondary">Cancel</a>
 </form>
