--- a/views/vendor-new.ejs
+++ b/views/vendor-new.ejs
@@ -2,9 +2,9 @@
 <form action="/vendors/<%=vendor.id%>/?_method=create" method="POST">
   <div class="form-group">
     <label for="name">Name:</label>
-    <input type="text" id="name" name="name" class="form-control" value="<%=vendor.name%>"/>
+    <input type="text" id="name" name="name" class="form-control"/>
     <label for="URL">URL:</label>
-    <input type="text" id="URL" name="URL" class="form-control" value="<%=vendor.URL%>"/>
+    <input type="text" id="URL" name="URL" class="form-control"/>
   </div>
   <input type="submit" value="Create" class="btn btn-primary" />
 
