fixed vendor new create and index routes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,6 @@
 
-<a href="/login">Please log in</a>
+    <div class="col-md">
+        <div class="row">
+            <a class="btn btn-primary" href="/login" style="width: 20%px">Please log in</a>
+        </div>
+    </div>
