--- a/views/vendor-index.ejs
+++ b/views/vendor-index.ejs
@@ -31,7 +31,7 @@
                     <a href="vendors/<%=vendor.id%>"><%= vendor.name %></a>
                 </td>
                 <td>
-                    <a href="<%=vendor.url%>"><%= vendor.url %></a>
+                    <a href="https:<%=vendor.URL%>"><%= vendor.URL %></a>
                 </td>
             </tr>
         <% }) %>
