--- a/views/vendor-new.ejs
+++ b/views/vendor-new.ejs
@@ -1,5 +1,5 @@
 <h2>New Vendor</h2>
-<form action="/vendors/<%=vendor.id%>/?_method=create" method="POST">
+<form action="/vendors" method="POST">
   <div class="form-group">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" class="form-control"/>
